# purism-cv

./: README.md  com.github.wctaylor.PurismCV.json  meson.build
data/: com.github.wctaylor.PurismCV.appdata.xml.in  com.github.wctaylor.PurismCV.desktop.in  com.github.wctaylor.PurismCV.gschema.xml  meson.build  purism-cv.gresource.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: config.py.in  main.py  meson.build  purism-cv.in  window.py
